Updated Texture converter to read DX1, DX3, and BC7 (DX11) formats. Updated Texture methods to accept Streams to work with Modded items with textures. Added Mod field to component information. Updated Texture tests.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -2842,4 +2842,16 @@ Reason: {1}</value>
   <data name="ErrorStackLabel" xml:space="preserve">
     <value>Stack:</value>
   </data>
+  <data name="WnComponentsColComponentMod" xml:space="preserve">
+    <value>Mod</value>
+  </data>
+  <data name="WnComponentsColCubeMod" xml:space="preserve">
+    <value>Mod</value>
+  </data>
+  <data name="WnComponentsColItemMod" xml:space="preserve">
+    <value>Mod</value>
+  </data>
+  <data name="WnComponentsColMaterialMod" xml:space="preserve">
+    <value>Mod</value>
+  </data>
 </root>
