#137 Fix heavy/light not working for half blocks. #138 Add ability to selectively change cubes from heavy/light armor to opposite. Required reorganization of menus and code.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -1315,8 +1315,8 @@ Distance:		{1:#,##0.0} m</value>
   <data name="CtlCubeMnuDeleteCube" xml:space="preserve">
     <value>Delete</value>
   </data>
-  <data name="CtlCubeMnuFrameworkCube" xml:space="preserve">
-    <value>Framework</value>
+  <data name="CtlCubeMnuConvertFrameworkValue" xml:space="preserve">
+    <value>To specified value</value>
   </data>
   <data name="CtlCubeMnuOwnerCube" xml:space="preserve">
     <value>Owner</value>
